<resources>
    <string name="app_name">Login and Password</string>
    <string name="authorization_login">Введете логин</string>
    <string name="authorization_password">Введите пароль</string>
    <string name="authorization_enter">Вход</string>
    <string name="authorization_image">Картинка</string>
    <string name="authorization_error_login">Введите корректный логин</string>
    <string name="authorization_error_password">Введите корректный пароль</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="graphAuthorizationAndCatalog"> Blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>