<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthorizationActivity">


    <ImageView
        android:id="@+id/aa_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/authorization_image"
        app:srcCompat="@drawable/ic_login_loga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        />

    <EditText
        android:id="@+id/aa_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/authorization_login"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/authorization_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aa_imageView"
        android:autofillHints="" />

    <EditText
        android:id="@+id/aa_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/authorization_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:text="@string/authorization_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aa_login" />

    <Button
        android:id="@+id/aa_buttonEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authorization_enter"
        android:minWidth="200dp"
        app:layout_constraintTop_toBottomOf="@id/aa_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>